k8s/comment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: comment-service-server
  template:
    metadata:
      labels:
        component: comment-service-server
    spec:
      containers:
        - name: comment-service
          image: d0rka/comment-service
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service-cis
spec:
  type: ClusterIP
  selector:
    component: comment-service-server
  ports:
    - port: 5001
      targetPort: 5001
