k8s/post-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: post-service-server
  template:
    metadata:
      labels:
        component: post-service-server
    spec:
      containers:
        - name: post-service
          image: d0rka/post-service
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: post-service-cis
spec:
  type: ClusterIP
  selector:
    component: post-service-server
  ports:
    - port: 80
      targetPort: 80
