k8s/postgres-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        -
          name: postgres-storage
          persistentVolumeClaim:
            claimName: blog-db-pvc
      containers:
        -
          name: postgres
          image: debezium/postgres:12
          ports:
            -
              containerPort: 5432
          volumeMounts:
            -
              name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cis
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    -
      port: 5432
      targetPort: 5432
