k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: post-service-cis
                port:
                  number: 8080
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comment-service-cis
                port:
                  number: 8080
